syntax = "proto3";  // https://developers.google.com/protocol-buffers/docs/proto3

option java_multiple_files = true;  // Causes top-level messages, enums, and services to be defined at the package level.
option java_package = "cz.ctu.fee.dsv";     // The package you want to use for your generated Java classes.
option java_outer_classname = "CommandsProto";   // The class name for the outermost Java class (and hence the file name) you want to generate.
option objc_class_prefix = "DC";    // Sets the Objective-C class prefix.

package dsvcmds;
import "google/protobuf/empty.proto";

service Commands {
  rpc chngNNext (AddressProto) returns (TimeProto) {}
  rpc chngNext (AddressProto) returns (TimeProto) {}
  rpc chngPrev (AddressProto) returns (AddressProto) {}
  rpc nodeMissing (AddressProto) returns (TimeProto) {}
  rpc hello (google.protobuf.Empty) returns (TimeProto){}
  rpc join (AddressProto) returns(DSNeighboursProto){}
  rpc chngNNextOfPrev(AddressProto) returns(TimeProto) {}
  rpc preliminaryRequest(RequestResourceMessageProto) returns(TimeProto) {}
  rpc requestResource(RequestResourceMessageProto) returns(TimeProto) {}
  rpc acquireResource(AcquireMessageProto) returns(TimeProto) {}
  rpc resourceWasReleased(ResourceProto) returns(TimeProto) {}
}

message AddressProto {
  string hostname = 1;
  int32 port = 2;
  int32 time = 3;
}

message DSNeighboursProto {
  AddressProto next = 1;
  AddressProto nnext = 2;
  AddressProto prev = 3;
  AddressProto leader = 4;
  int32 time = 5;
}

message ResourceIdProto {
  string resourceId = 1;
  int32 time = 2;
}

//message PreliminaryRequestMessageProto {
//  string resourceId = 1;
//  AddressProto returnAddress = 2;
//}


message ResourceProto {
  string id = 1;
  string data = 2;
  int32 time = 3;
}

message RequestResourceMessageProto {
  string resourceId = 1;
  AddressProto requesterAddress = 2;
  int32 time = 3;
}

message AcquireMessageProto {
  optional ResourceProto resource = 1;
  AddressProto requesterAddress = 2;
  int32 time = 3;
}

message TimeProto{
  int32 time = 1;
}